You need cname in config json
to get admin page working

https://github.com/HubPress/hubpress.io/issues/442

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,8 @@
 {
   "meta": {
-    "username": "put your username here",
-    "repositoryName": "put your repository name here",
+    "username": "ochaloup",
+    "repositoryName": "blog.chalda.cz",
+    "cname": "blog.chalda.cz",
     "branch": "gh-pages"
   },
   "theme": {
