--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -12,7 +12,7 @@
     "logo": "/images/helmet.jpg",
     "cover": "/images/cover.jpg",
     "googleAnalytics": "UA-91848308-1",
-    "disqus": "chalda"
+    "disqus": "disqus_welkclfjo3"
   },
   "socialnetwork": {},
   "theme": {
