Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -18,7 +18,7 @@
   },
   "socialnetwork": {
     "email": "",
-    "github": "github.com/ochaloup/",
+    "github": "http://github.com/ochaloup",
     "twitter": "https://twitter.com/_chalda",
     "facebook": "",
     "googleplus": "",
