--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "gatsby-source-filesystem": "^4.23.0",
     "gatsby-transformer-asciidoc": "^3.24.0",
     "gatsby-transformer-sharp": "^4.23.1",
+    "highlight.js": "^11.6.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
