fighting with asciidoc css stuff

--- a/content/config.json
+++ b/content/config.json
@@ -1,9 +1,10 @@
 {
-  "title": "Blog by John Doe",
-  "url": "https://lumen.alxshelepenok.com",
+  "title": "Blog by chalda",
+  "url": "https://blog.chalda.cz",
   "subtitle": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
   "copyright": "© All rights reserved.",
-  "googleAnalyticsId": "UA-73379983-2",
+  "googleAnalyticsId": "UA-91848308-1",
+  "googleManagerTag": "GTM-5NQ9VLB",
   "disqusShortname": "",
   "postsLimit": 4,
   "pathPrefix": "/",
@@ -22,7 +23,7 @@
     }
   ],
   "author": {
-    "name": "John Doe",
+    "name": "chalda",
     "photo": "/photo.jpg",
     "bio": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
     "contacts": {
