--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prepare": "husky install",
     "semantic-release": "semantic-release",
     "serve": "gatsby serve",
+    "gatsbyinfo": "gatsby info --clipboard",
     "start": "npm run clean && gatsby develop --verbose",
     "test": "jest --config ./internal/testing/jest-config.ts",
     "test:coverage": "jest --coverage --config ./internal/testing/jest-config.ts",
